Added 'add to cart'

--- a/standalone2.html
+++ b/standalone2.html
@@ -23,6 +23,7 @@
     <!-- Load our React component. -->
 
     <script src="navBarRemoveEx02.jsx" defer type="text/babel"></script>
+    <script src="navBarButton3.jsx" defer type="text/babel"></script>
 </body>
 
 </html>
